# python-slugify

./: .gitignore  .python-version  .travis.yml  CHANGELOG.md  CREDITS.md  LICENSE.md  MANIFEST.in  README.md  README.rst  dev.requirements.txt  format.sh  meta.yaml  pep8.sh  pycodestyle.sh  pyproject.toml  requirements.txt  requirements_alt.txt  setup.cfg  setup.py  tea.yaml  test.py  tox.ini
.github/workflows/: ci.yml  dev.yml  main.yml
slugify/: __init__.py  __main__.py  __version__.py  slugify.py  special.py
